Fix footer flying above bottom on small pages

--- a/src/components/_layout.scss
+++ b/src/components/_layout.scss
@@ -1,3 +1,7 @@
+.main-content {
+  flex: 1;
+}
+
 .logo {
   font-family: "Hind Siliguri", sans-serif;
   font-weight: bold;
